# projet_spark_ESGI

./: README.md  pyproject.toml
infra/: bucket.tf  glue.tf  local.tf
src/fr/hymaia/: exo2_glue_job.py
src/fr/hymaia/exo1/: main.py
src/fr/hymaia/exo2/: main.py  spark_clean_job.py
src/fr/hymaia/exo2/aggregate/: .part-00000-6a3fe20f-45b2-41e4-9548-5926c9964859-c000.csv.crc  part-00000-6a3fe20f-45b2-41e4-9548-5926c9964859-c000.csv
src/fr/hymaia/exo2/clean/: .part-00000-e966a597-a796-44e9-8333-1f76b8577a94-c000.snappy.parquet.crc  part-00000-e966a597-a796-44e9-8333-1f76b8577a94-c000.snappy.parquet
src/fr/hymaia/exo3/: test_integration_spark_jobs.py  test_spark_jobs.py
src/fr/hymaia/exo4/: no_udf copy.py  no_udf.py  python_udf.py  scala_udf.py
src/resources/exo1/output/: .part-00000-57645ba0-6da1-4c99-9d01-7403116f3977-c000.snappy.parquet.crc  part-00000-57645ba0-6da1-4c99-9d01-7403116f3977-c000.snappy.parquet
